--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "init": "cd node_modules/powergate/docker; docker-compose -f docker-compose.yaml -f ipfs-image.yaml -f powergate-image.yaml up -d --build",
     "start": "babel-node .",
+    "clean" : "rm -rf output",
     "stop": "cd node_modules/powergate/docker; docker stop $(docker ps -aq); docker rm $(docker ps -aq)"
   },
   "babel": {
@@ -19,6 +20,7 @@
     "@textile/powergate-client": "^0.1.0-beta.13",
     "babel-node": "^0.0.1-security",
     "docker-compose": "^0.23.4",
+    "dotenv": "^8.2.0",
     "powergate": "https://github.com/textileio/powergate.git"
   },
   "devDependencies": {
